Remove margin from input label

--- a/Syncr/sync/templates/sync/job/list.html
+++ b/Syncr/sync/templates/sync/job/list.html
@@ -6,28 +6,28 @@
 <form action="" class="my-2">
     <div class="flex gap-4 items-center">
         <div class="flex-grow">
-            <label for="{{ searchForm.search.id_for_label }}" class="block mb-2 text-gray-900 dark:text-white">{{ searchForm.search.label }}</label>
+            <label for="{{ searchForm.search.id_for_label }}" class="block text-gray-900 dark:text-white">{{ searchForm.search.label }}</label>
             {{searchForm.search}}
         </div>
         <div class="flex gap-4">
             <div>
-                <label for="{{ searchForm.type.id_for_label }}" class="block mb-2 text-gray-900 dark:text-white">{{ searchForm.type.label }}</label>
+                <label for="{{ searchForm.type.id_for_label }}" class="block text-gray-900 dark:text-white">{{ searchForm.type.label }}</label>
                 {{searchForm.type}}
             </div>
             <div>
-                <label for="{{ searchForm.callee.id_for_label }}" class="block mb-2 text-gray-900 dark:text-white">{{ searchForm.callee.label }}</label>
+                <label for="{{ searchForm.callee.id_for_label }}" class="block text-gray-900 dark:text-white">{{ searchForm.callee.label }}</label>
                 {{searchForm.callee}}
             </div>
             <div>
-                <label for="{{ searchForm.status.id_for_label }}" class="block mb-2 text-gray-900 dark:text-white">{{ searchForm.status.label }}</label>
+                <label for="{{ searchForm.status.id_for_label }}" class="block text-gray-900 dark:text-white">{{ searchForm.status.label }}</label>
                 {{searchForm.status}}
             </div>
             <div>
-                <label for="{{ searchForm.last_x_days.id_for_label }}" class="block mb-2 text-gray-900 dark:text-white">{{ searchForm.last_x_days.label }}</label>
+                <label for="{{ searchForm.last_x_days.id_for_label }}" class="block text-gray-900 dark:text-white">{{ searchForm.last_x_days.label }}</label>
                 {{searchForm.last_x_days}}
             </div>
             <div>
-                <label for="{{ searchForm.order_by.id_for_label }}" class="block mb-2 text-gray-900 dark:text-white">{{ searchForm.order_by.label }}</label>
+                <label for="{{ searchForm.order_by.id_for_label }}" class="block text-gray-900 dark:text-white">{{ searchForm.order_by.label }}</label>
                 {{searchForm.order_by}}
             </div>
         </div>
