--- a/Syncr/templates/base.html
+++ b/Syncr/templates/base.html
@@ -10,6 +10,7 @@
 
     {% comment %} Just for development: {% endcomment %}
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <script src="https://cdn.jsdelivr.net/npm/apexcharts@3.46.0/dist/apexcharts.min.js"></script>
     {% block scripts_head %}{% endblock scripts_head %}
 </head>
 <body class="dark:bg-gray-600">
