Fix running and finished jobs text whern there are no jobs

--- a/Syncr/sync/templates/sync/ajax/indexJobFinished.html
+++ b/Syncr/sync/templates/sync/ajax/indexJobFinished.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% if finishedJobs.count < 1 %}
-<p>No jobs finished</p>
+<p class="rounded-b-lg text-gray-700 bg-gray-50 dark:bg-gray-800 dark:text-gray-400 p-2 max-w-full">No jobs finished</p>
 {% else %}
 <div class="relative overflow-x-auto">
     <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
