--- a/Syncr/sync/templates/sync/ajax/indexJobRunning.html
+++ b/Syncr/sync/templates/sync/ajax/indexJobRunning.html
@@ -1,7 +1,7 @@
 {% load custom_filters %}
 
 {% if runningJobs.count < 1 %}
-<p class="text-gray-700 bg-gray-50 dark:bg-gray-800 dark:text-gray-400 p-2 max-w-full">No jobs running, next scheduled job is in [INSERT TIME]</p>
+<p class="rounded-b-lg text-gray-700 bg-gray-50 dark:bg-gray-800 dark:text-gray-400 p-2 max-w-full">No jobs running, next scheduled job is in [INSERT TIME]</p>
 {% else %}
 <div class="relative overflow-x-auto">
     <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
